--- a/join.html
+++ b/join.html
@@ -431,22 +431,22 @@
                             </div>
                         </div>
 
-                        <!-- Merebank Student Membership -->
-                        <div class="col-md-6 col-lg-4 mb-4">
-                            <div class="membership-plan">
-                                <h3 class="plan-title">STUDENT</h3>
-                                <div class="plan-price">R200<span>/month</span></div>
-                                <ul class="plan-features">
-                                    <li>Special student pricing</li>
-                                    <li>Debit order available</li>
-                                    <li>Valid student ID required</li>
-                                    <li>All gym access included</li>
-                                </ul>
-                                <button class="btn btn-outline-gold w-100" onclick="eliteChatbot.handlePackageSelection('STUDENT - MEREBANK')">
-                                    Choose Student
-                                </button>
-                            </div>
-                        </div>
+                    <!-- Merebank Student Membership -->
+<div class="col-md-6 col-lg-4 mb-4">
+    <div class="membership-plan">
+        <h3 class="plan-title">STUDENT</h3>
+        <div class="plan-price">R150<span>/month</span></div>
+        <ul class="plan-features">
+            <li>Special student pricing</li>
+            <li>Debit order only</li>
+            <li>Valid student ID required</li>
+            <li>All gym access included</li>
+        </ul>
+        <button class="btn btn-outline-gold w-100" onclick="eliteChatbot.handlePackageSelection('STUDENT - MEREBANK')">
+            Choose Student
+        </button>
+    </div>
+</div>
 
                         <!-- Merebank 6 Month Package -->
                         <div class="col-md-6 col-lg-4 mb-4">
